# message-client

./: Cargo.toml  README.md  flake.nix  package.nix
.github/workflows/: release.yml
src/: input.rs  main.rs  network.rs  poll.rs  state.rs  tracing_writer.rs
src/components/: config.rs  input_box.rs  message.rs  message_list.rs  mod.rs  status_bar.rs
