[package]
name = "message-client"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.39"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tui = "0.19.0"
